<resources>
    <string name="app_name">Tables2</string>
    <string name="pref_menu_item"> Settings </string>
    <string name="display_text">Show in Words</string>
    <string name="hidden">Hidden</string>
    <string name="Shown">Shown</string>
    <string name="pref_key">display_text</string>
    <string name="et_display_string">A number less than 50 </string>
    <string name="tv_what_table">Welcome to the Table\'s app!! </string>
    <string name="button">button</string>
    <string name="go">Go!!</string>


    <!--ListPreference-->

    <string name="list_pref_labels">Set Color</string>
    <string name="list_pref_key">color_key</string>
    <string name="list_pref_default_value">holo_green</string>

    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_green">Green</string>
    <string name="pref_color_label_blue">Blue</string>

    <string name="pref_color_value_red">red</string>
    <string name="pref_color_value_green">green</string>
    <string name="pref_color_value_blue">blue</string>

    <string name="pref_color_label_default">Holo Green</string>
    <string name="pref_color_value_default">holo_green</string>


    <!--EditTextPreference-->

    <string name="edit_text_title">Tables Multiplication Factor (Max Value 15)</string>
    <string name="edit_text_key">edit_text_key</string>
    <string name="edit_text_default_value">15</string>


</resources>
