<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference


        android:defaultValue="true"
        android:key="@string/pref_key"
        android:summaryOff="hidden"
        android:summaryOn="shown"
        android:title="@string/display_text" />

    <ListPreference
        android:defaultValue="@string/list_pref_default_value"
        android:entries="@array/pref_color_options_labels"
        android:entryValues="@array/pref_color_options_values"
        android:key="@string/list_pref_key"
        android:title="@string/list_pref_labels" />

    <EditTextPreference


        android:defaultValue="@string/edit_text_default_value"
        android:key="@string/edit_text_key"
        android:title="@string/edit_text_title" />

</PreferenceScreen>