<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    tools:context="e.sura23.tables2.what_table">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_what_table"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="30sp"

        />

    <EditText
        android:id="@+id/et_multiplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/et_display_string"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:onClick="onButtonClick"
        android:text="@string/go"
        android:textSize="30sp" />

</LinearLayout>
